--- a/server/package.json
+++ b/server/package.json
@@ -6,10 +6,19 @@
   "author": "osawa-koki",
   "license": "Apache-2.0",
   "private": false,
+  "scripts": {
+    "dev": "nodemon --exec ts-node ./app/index.ts",
+    "prisma": "npx prisma"
+  },
   "dependencies": {
     "@prisma/client": "^5.0.0",
     "@types/express": "^4.17.17",
     "express": "^4.18.2",
-    "prisma": "^5.0.0"
+    "prisma": "^5.0.0",
+    "ts-node": "^10.9.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1",
+    "typescript": "^5.1.6"
   }
 }
