--- a/server/package.json
+++ b/server/package.json
@@ -8,17 +8,25 @@
   "private": false,
   "scripts": {
     "dev": "nodemon --exec ts-node ./app/index.ts",
+    "lint:check": "eslint --ext .ts .",
+    "lint:fix": "eslint --ext .ts . --fix",
     "prisma": "npx prisma"
   },
   "dependencies": {
     "@prisma/client": "^5.0.0",
     "@types/express": "^4.17.17",
+    "eslint": "^8.0.1",
     "express": "^4.18.2",
     "prisma": "^5.0.0",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
+    "eslint-config-standard-with-typescript": "^37.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
+    "eslint-plugin-promise": "^6.0.0",
     "nodemon": "^3.0.1",
-    "typescript": "^5.1.6"
+    "typescript": "*"
   }
 }
