--- a/server/package.json
+++ b/server/package.json
@@ -6,10 +6,15 @@
   "author": "osawa-koki",
   "license": "Apache-2.0",
   "private": false,
+  "engines": {
+    "node": ">=16.0.0",
+    "yarn": ">=1.22.0"
+  },
   "scripts": {
     "dev": "nodemon --exec ts-node ./app/index.ts",
     "lint:check": "eslint --ext .ts .",
     "lint:fix": "eslint --ext .ts . --fix",
+    "test": "echo \"Error: no test specified\" && exit 0",
     "prisma": "npx prisma"
   },
   "dependencies": {
