--- a/server/package.json
+++ b/server/package.json
@@ -15,11 +15,16 @@
     "lint:check": "eslint --ext .ts .",
     "lint:fix": "eslint --ext .ts . --fix",
     "test": "echo \"Error: no test specified\" && exit 0",
-    "prisma": "npx prisma"
+    "db:migrate": "npx prisma migrate dev --name init",
+    "db:seed": "ts-node ./db/seed.ts",
+    "db:reset": "npx prisma migrate reset --force"
   },
   "dependencies": {
     "@prisma/client": "^5.0.0",
     "@types/express": "^4.17.17",
+    "csv": "^6.3.1",
+    "csv-parse": "^5.4.0",
+    "dayjs": "^1.11.9",
     "eslint": "^8.0.1",
     "express": "^4.18.2",
     "prisma": "^5.0.0",
