--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,6 @@
     "eslint-plugin-react": "^7.32.2",
     "jest": "^29.4.3",
     "ts-jest": "^29.1.0",
-    "typescript": "*"
+    "typescript": "^5.0.0"
   }
 }
