--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -17,7 +17,7 @@ env:
   server-directory: ./server
 
 jobs:
-  cloient-check:
+  client-check:
     runs-on: ubuntu-latest
     strategy:
       matrix:
