--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,8 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "sass": "^1.62.1"
+    "sass": "^1.62.1",
+    "swr": "^2.2.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.1",
