--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   },
   "scripts": {
     "dev": "nodemon --exec ts-node ./app/index.ts",
+    "start": "ts-node ./app/index.ts",
     "lint:check": "eslint --ext .ts .",
     "lint:fix": "eslint --ext .ts . --fix",
     "test": "echo \"Error: no test specified\" && exit 0",
